--- a/frontend/src/app/components/customer-list/customer-list.component.html
+++ b/frontend/src/app/components/customer-list/customer-list.component.html
@@ -25,7 +25,7 @@
 
     <div *ngIf="currentCustomer.id">
       <h4>Report</h4>
-
+      <pre>{{customerReport | json}}</pre>
     </div>
   </div>
 </div>
